--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
 }
 
 dependencies {
+    implementation "com.android.billingclient:billing:6.0.1"
     implementation 'androidx.core:core:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
