update privacy policy

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 org.gradle.cache.internal.lockListener=false
 org.gradle.daemon=false
+android.suppressUnsupportedCompileSdk=36
