--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,19 @@ plugins {
     id 'com.android.application'
 }
 
+// Load keystore properties
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace 'com.faisal.protoolkit'
     compileSdk 36
 
     defaultConfig {
-        applicationId 'com.example.protoolkit'
+        applicationId 'com.faisal.protoolkit'
         minSdk 24
         targetSdk 36
         versionCode 1
@@ -21,13 +28,30 @@ android {
         buildConfigField 'String', 'ADMOB_REWARDED_ID', '"ca-app-pub-3940256099942544/5224354917"'
     }
 
+    signingConfigs {
+        release {
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+        }
+        debug {
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             pseudoLocalesEnabled true
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -44,6 +68,9 @@ android {
     packagingOptions {
         resources {
             excludes += ['/META-INF/{AL2.0,LGPL2.1}']
+        }
+        jniLibs {
+            useLegacyPackaging = true
         }
     }
 
@@ -69,11 +96,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:23.3.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.mlkit:barcode-scanning:17.3.0'
-    implementation 'androidx.camera:camera-core:1.3.4'
-    implementation 'androidx.camera:camera-camera2:1.3.4'
-    implementation 'androidx.camera:camera-lifecycle:1.3.4'
-    implementation 'androidx.camera:camera-view:1.3.4'
-    implementation 'androidx.camera:camera-mlkit-vision:1.4.0-alpha03'
+    implementation 'androidx.camera:camera-core:1.4.1'
+    implementation 'androidx.camera:camera-camera2:1.4.1'
+    implementation 'androidx.camera:camera-lifecycle:1.4.1'
+    implementation 'androidx.camera:camera-view:1.4.1'
+    implementation 'androidx.camera:camera-mlkit-vision:1.4.1'
     implementation "androidx.concurrent:concurrent-futures:1.3.0"
     implementation 'com.google.guava:guava:31.1-android'
 
