--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id("com.google.gms.google-services")
 }
 
 // Load keystore properties
@@ -96,13 +97,23 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:23.3.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.mlkit:barcode-scanning:17.3.0'
+    
     implementation 'androidx.camera:camera-core:1.4.1'
     implementation 'androidx.camera:camera-camera2:1.4.1'
     implementation 'androidx.camera:camera-lifecycle:1.4.1'
     implementation 'androidx.camera:camera-view:1.4.1'
     implementation 'androidx.camera:camera-mlkit-vision:1.4.1'
+    implementation 'com.google.android.gms:play-services-mlkit-document-scanner:16.0.0'
     implementation "androidx.concurrent:concurrent-futures:1.3.0"
     implementation 'com.google.guava:guava:31.1-android'
+
+    // Import the Firebase BoM
+    implementation(platform("com.google.firebase:firebase-bom:34.4.0"))
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation("com.google.firebase:firebase-analytics")
+
 
 
 
