--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application' version '8.5.2' apply false
+    id("com.google.gms.google-services") version "4.4.4" apply false
 }
 
 task clean(type: Delete) {
