--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-document-scanner:16.0.0'
     implementation "androidx.concurrent:concurrent-futures:1.3.0"
     implementation 'com.google.guava:guava:31.1-android'
+    
+    // Room database
+    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    annotationProcessor "androidx.room:room-compiler:2.5.0"
+    
+    // WorkManager
+    implementation "androidx.work:work-runtime:2.8.1"
 
     // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:34.4.0"))
