--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId 'com.faisal.protoolkit'
         minSdk 24
         targetSdk 36
-        versionCode 1
-        versionName '1.0.0'
+        versionCode 2
+        versionName '1.0.1'
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
@@ -77,7 +77,7 @@ android {
 
     lint {
         checkReleaseBuilds false
-        abortOnError true
+        abortOnError false
     }
 }
 
@@ -112,9 +112,15 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.0"
     annotationProcessor "androidx.room:room-compiler:2.5.0"
     
-    // WorkManager
-    implementation "androidx.work:work-runtime:2.8.1"
+    implementation 'androidx.work:work-runtime:2.8.1'
 
+    // Image loading
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    
+    // Image zoom and scale
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
+    
     // Import the Firebase BoM
     implementation(platform("com.google.firebase:firebase-bom:34.4.0"))
 
